# roche

./: .dockerignore  .env  .pre-commit-config.yaml  README.md  compose.yml
src/: Dockerfile  auth.py  entrypoint.sh  errors.py  logger.py  main.py  microwave.py  pyproject.toml  redis_session.py  roche.conf  routes.py  schema.py  service.py  service_websockets.py  setup.cfg
src/static/: index.html  rest.js
src/tests/: conftest.py  test_auth.py  test_buttons.py  test_errors.py  test_status.py  test_websocket.py  web_client.py  websocket_client.py
